crates/web/tests/snapshots/fixture_structure_test__aggregate_view.snap
---
source: crates/web/tests/fixture_structure_test.rs
expression: value
---
{
  "can_redo": false,
  "can_undo": false,
  "containerfile_preview": "FROM registry.redhat.io/rhel9/rhel-bootc:9.4\n\n# Packages\nRUN dnf install -y \\\n    httpd-2.4.57-11.el9_4.1.x86_64 \\\n    openssl-1:3.0.7-28.el9_4.x86_64 \\\n    && dnf clean all\n\n# Config files\nCOPY etc/chrony.conf /etc/chrony.conf\n",
  "generation": 1,
  "repo_conflict_count": 0,
  "repo_groups": [
    {
      "enabled": true,
      "is_distro": true,
      "package_count": 2,
      "provenance": "verified",
      "section_id": "rhel-9-for-x86_64-baseos-rpms",
      "tier": "distro"
    },
    {
      "enabled": true,
      "is_distro": true,
      "package_count": 2,
      "provenance": "verified",
      "section_id": "rhel-9-for-x86_64-appstream-rpms",
      "tier": "distro"
    }
  ],
  "sections": [
    {
      "display_name": "Packages",
      "id": "packages",
      "is_decision_section": true,
      "zones": {
        "consensus": {
          "count": 2,
          "items": [
            {
              "include": true,
              "item_id": {
                "key": {
                  "arch": "x86_64",
                  "name": "bash"
                },
                "kind": "Package"
              },
              "prevalence": {
                "count": 3,
                "total": 3
              },
              "source_repo": "rhel-9-for-x86_64-baseos-rpms",
              "triage": {
                "bucket": "universal",
                "prevalence": {
                  "count": 3,
                  "total": 3
                }
              }
            },
            {
              "include": true,
              "item_id": {
                "key": {
                  "arch": "x86_64",
                  "name": "openssl"
                },
                "kind": "Package"
              },
              "prevalence": {
                "count": 3,
                "total": 3
              },
              "source_repo": "rhel-9-for-x86_64-baseos-rpms",
              "triage": {
                "bucket": "universal",
                "prevalence": {
                  "count": 3,
                  "total": 3
                }
              }
            }
          ]
        },
        "divergent": {
          "count": 1,
          "items": [
            {
              "include": false,
              "item_id": {
                "key": {
                  "arch": "x86_64",
                  "name": "vim-enhanced"
                },
                "kind": "Package"
              },
              "prevalence": {
                "count": 1,
                "total": 3
              },
              "source_repo": "rhel-9-for-x86_64-appstream-rpms",
              "triage": {
                "bucket": "divergent",
                "prevalence": {
                  "count": 1,
                  "total": 3
                }
              }
            }
          ]
        },
        "near_consensus": {
          "count": 1,
          "items": [
            {
              "include": true,
              "item_id": {
                "key": {
                  "arch": "x86_64",
                  "name": "httpd"
                },
                "kind": "Package"
              },
              "prevalence": {
                "count": 2,
                "total": 3
              },
              "source_repo": "rhel-9-for-x86_64-appstream-rpms",
              "triage": {
                "bucket": "partial",
                "prevalence": {
                  "count": 2,
                  "total": 3
                }
              }
            }
          ]
        }
      }
    },
    {
      "display_name": "Config Files",
      "id": "configs",
      "is_decision_section": true,
      "zones": {
        "consensus": {
          "count": 1,
          "items": [
            {
              "include": true,
              "item_id": {
                "key": {
                  "path": "/etc/sysconfig/network"
                },
                "kind": "Config"
              },
              "prevalence": {
                "count": 3,
                "total": 3
              },
              "source_repo": "",
              "triage": {
                "bucket": "universal",
                "prevalence": {
                  "count": 3,
                  "total": 3
                }
              }
            }
          ]
        },
        "divergent": {
          "count": 1,
          "items": [
            {
              "include": true,
              "item_id": {
                "key": {
                  "path": "/etc/chrony.conf"
                },
                "kind": "Config"
              },
              "prevalence": {
                "count": 2,
                "total": 3
              },
              "source_repo": "",
              "triage": {
                "bucket": "divergent",
                "prevalence": {
                  "count": 2,
                  "total": 3
                }
              },
              "variants": {
                "count": 2,
                "options": [
                  {
                    "hash": "a1b2c3",
                    "host_count": 2,
                    "hosts": [
                      "host-01.example.com",
                      "host-02.example.com"
                    ],
                    "selected": true
                  },
                  {
                    "hash": "d4e5f6",
                    "host_count": 1,
                    "hosts": [
                      "host-03.example.com"
                    ],
                    "selected": false
                  }
                ],
                "selected": "a1b2c3"
              }
            }
          ]
        },
        "near_consensus": {
          "count": 0,
          "items": []
        }
      }
    },
    {
      "display_name": "Services",
      "id": "services",
      "is_decision_section": true,
      "zones": {
        "consensus": {
          "count": 1,
          "items": [
            {
              "include": true,
              "item_id": {
                "key": {
                  "unit": "httpd.service"
                },
                "kind": "Service"
              },
              "prevalence": {
                "count": 3,
                "total": 3
              },
              "source_repo": "",
              "triage": {
                "bucket": "universal",
                "prevalence": {
                  "count": 3,
                  "total": 3
                }
              }
            }
          ]
        },
        "divergent": {
          "count": 0,
          "items": []
        },
        "near_consensus": {
          "count": 0,
          "items": []
        }
      }
    }
  ],
  "session_is_sensitive": false,
  "summary": {
    "actionable_variant_items": [
      {
        "item_id": {
          "key": {
            "path": "/etc/chrony.conf"
          },
          "kind": "Config"
        },
        "max_host_spread": 2,
        "section_id": "configs",
        "variant_count": 2
      }
    ],
    "host_count": 3,
    "informational_variant_count": 0
  }
}
