crates/web/tests/snapshots/fixture_structure_test__error_server_500.snap
---
source: inspectah-web/tests/fixture_structure_test.rs
expression: value
---
{
  "_status": 500,
  "error": "internal server error"
}
