crates/web/tests/snapshots/fixture_structure_test__post_redo_success.snap
---
source: inspectah-web/tests/fixture_structure_test.rs
expression: value
---
{
  "baseline_summary": {
    "baseline_count": 342,
    "image_digest": "sha256:a1b2c3d4e5f6a1b2c3d4e5f6a1b2c3d4e5f6a1b2c3d4e5f6a1b2c3d4e5f6a1b2",
    "image_ref": "registry.redhat.io/rhel9/rhel-bootc:9.4",
    "review_count": 2,
    "strategy": "auto",
    "user_added_count": 3
  },
  "config_files": [
    {
      "entry": {
        "category": "other",
        "content": "NETWORKING=yes\nHOSTNAME=test-host-01.example.com\n",
        "diff_against_rpm": "--- /etc/sysconfig/network.rpmorig\n+++ /etc/sysconfig/network\n@@ -1 +1,2 @@\n NETWORKING=yes\n+HOSTNAME=test-host-01.example.com\n",
        "fleet": null,
        "include": true,
        "kind": "modified",
        "package": "initscripts",
        "path": "/etc/sysconfig/network",
        "rpm_va_flags": "S.5....T.",
        "tie": false,
        "tie_winner": false
      },
      "triage": {
        "annotations": [],
        "primary_reason": "config_modified",
        "triage": {
          "baseline": "site",
          "mode": "single_host"
        }
      }
    },
    {
      "entry": {
        "category": "other",
        "content": "# Use internal NTP servers\nserver ntp1.example.com iburst\nserver ntp2.example.com iburst\ndriftfile /var/lib/chrony/drift\nmakestep 1.0 3\nrtcsync\n",
        "diff_against_rpm": null,
        "fleet": null,
        "include": true,
        "kind": "modified",
        "package": "chrony",
        "path": "/etc/chrony.conf",
        "rpm_va_flags": "S.5....T.",
        "tie": false,
        "tie_winner": false
      },
      "triage": {
        "annotations": [],
        "primary_reason": "config_modified",
        "triage": {
          "baseline": "site",
          "mode": "single_host"
        }
      }
    },
    {
      "entry": {
        "category": "sysctl",
        "content": "# Custom sysctl overrides\nnet.core.somaxconn = 4096\nvm.swappiness = 10\n",
        "diff_against_rpm": null,
        "fleet": null,
        "include": false,
        "kind": "unowned",
        "package": null,
        "path": "/etc/sysctl.d/99-custom.conf",
        "rpm_va_flags": null,
        "tie": false,
        "tie_winner": false
      },
      "triage": {
        "annotations": [
          {
            "detail": "Configuration file not owned by any installed RPM",
            "level": "needs_review",
            "reason": "config_unowned"
          }
        ],
        "primary_reason": "config_unowned",
        "triage": {
          "baseline": "investigate",
          "mode": "single_host"
        }
      }
    }
  ],
  "containerfile_preview": "FROM registry.redhat.io/rhel9/rhel-bootc:9.4\n\n# Packages\nRUN dnf install -y \\\n    httpd-2.4.57-11.el9_4.1.x86_64 \\\n    openssl-1:3.0.7-28.el9_4.x86_64 \\\n    custom-agent-1.0.0-1.el9.x86_64 \\\n    && dnf clean all\n\n# Config files\nCOPY etc/sysconfig/network /etc/sysconfig/network\nCOPY etc/chrony.conf /etc/chrony.conf\n\n# Users\nRUN useradd -u 1000 -g 1000 -s /bin/bash -d /home/testuser testuser\n",
  "flatpaks": [],
  "generation": 4,
  "packages": [
    {
      "entry": {
        "arch": "x86_64",
        "epoch": "0",
        "fleet": null,
        "include": true,
        "name": "bash",
        "release": "3.el9",
        "source_repo": "rhel-9-for-x86_64-baseos-rpms",
        "state": "base_image_only",
        "version": "5.2.26"
      },
      "triage": {
        "annotations": [],
        "primary_reason": "package_baseline_match",
        "triage": {
          "baseline": "baseline",
          "mode": "single_host"
        }
      }
    },
    {
      "entry": {
        "arch": "x86_64",
        "epoch": "0",
        "fleet": null,
        "include": true,
        "name": "httpd",
        "release": "11.el9_4.1",
        "source_repo": "rhel-9-for-x86_64-appstream-rpms",
        "state": "added",
        "version": "2.4.57"
      },
      "triage": {
        "annotations": [],
        "primary_reason": "package_user_added",
        "triage": {
          "baseline": "site",
          "mode": "single_host"
        }
      }
    },
    {
      "entry": {
        "arch": "x86_64",
        "epoch": "1",
        "fleet": null,
        "include": true,
        "name": "openssl",
        "release": "28.el9_4",
        "source_repo": "rhel-9-for-x86_64-baseos-rpms",
        "state": "modified",
        "version": "3.0.7"
      },
      "triage": {
        "annotations": [],
        "primary_reason": "package_version_changed",
        "triage": {
          "baseline": "investigate",
          "mode": "single_host"
        }
      }
    },
    {
      "entry": {
        "arch": "x86_64",
        "epoch": "2",
        "fleet": null,
        "include": false,
        "name": "vim-enhanced",
        "release": "1.el9",
        "source_repo": "rhel-9-for-x86_64-appstream-rpms",
        "state": "added",
        "version": "9.0.2153"
      },
      "triage": {
        "annotations": [],
        "primary_reason": "package_user_added",
        "triage": {
          "baseline": "site",
          "mode": "single_host"
        }
      }
    },
    {
      "entry": {
        "arch": "x86_64",
        "epoch": "0",
        "fleet": null,
        "include": true,
        "name": "custom-agent",
        "release": "1.el9",
        "source_repo": "",
        "state": "local_install",
        "version": "1.0.0"
      },
      "triage": {
        "annotations": [
          {
            "detail": "Package installed from local file, not from a repository",
            "level": "needs_review",
            "reason": "package_local_install"
          }
        ],
        "primary_reason": "package_local_install",
        "triage": {
          "baseline": "investigate",
          "mode": "single_host"
        }
      }
    }
  ],
  "quadlets": [],
  "repo_groups": [
    {
      "enabled": true,
      "is_distro": true,
      "package_count": 2,
      "provenance": "verified",
      "section_id": "rhel-9-for-x86_64-baseos-rpms",
      "tier": "distro"
    },
    {
      "enabled": true,
      "is_distro": true,
      "package_count": 2,
      "provenance": "verified",
      "section_id": "rhel-9-for-x86_64-appstream-rpms",
      "tier": "distro"
    }
  ],
  "service_dropins": [],
  "service_states": [
    {
      "include": true,
      "owning_package": "httpd",
      "triage": {
        "annotations": [],
        "primary_reason": "service_non_default",
        "triage": {
          "baseline": "site",
          "mode": "single_host"
        }
      },
      "unit": "httpd.service"
    },
    {
      "include": false,
      "owning_package": null,
      "triage": {
        "annotations": [
          {
            "detail": "Non-default service state",
            "level": "needs_review",
            "reason": "service_non_default"
          }
        ],
        "primary_reason": "service_non_default",
        "triage": {
          "baseline": "investigate",
          "mode": "single_host"
        }
      },
      "unit": "custom-agent.service"
    }
  ],
  "session_is_sensitive": false,
  "stats": {
    "baseline_available": true,
    "can_redo": false,
    "can_undo": true,
    "needs_review_count": 2,
    "ops_applied": 1,
    "sections": [
      {
        "excluded": 1,
        "included": 4,
        "kind": "package",
        "total": 5
      },
      {
        "excluded": 1,
        "included": 2,
        "kind": "config",
        "total": 3
      },
      {
        "excluded": 1,
        "included": 1,
        "kind": "service",
        "total": 2
      },
      {
        "excluded": 0,
        "included": 1,
        "kind": "user",
        "total": 1
      }
    ]
  },
  "sysctls": [
    {
      "default": "4096",
      "include": true,
      "key": "net.core.somaxconn",
      "runtime": "4096",
      "source": "/etc/sysctl.d/99-custom.conf",
      "triage": {
        "annotations": [],
        "primary_reason": "sysctl_file_backed_override",
        "triage": {
          "baseline": "site",
          "mode": "single_host"
        }
      }
    }
  ],
  "tuned": [],
  "users_groups_decisions": [
    {
      "classification": "interactive",
      "classification_rationale": "Interactive shell /bin/bash with home directory",
      "containerfile_strategy": "useradd",
      "gid": 1000,
      "has_subuid": false,
      "has_sudo": true,
      "home": "/home/testuser",
      "include": true,
      "name": "testuser",
      "password_choice": "none",
      "password_status": "password_set",
      "shell": "/bin/bash",
      "ssh_key_count": 1,
      "supplementary_groups": [
        "wheel",
        "testuser"
      ],
      "uid": 1000
    }
  ],
  "version_changes": [
    {
      "arch": "x86_64",
      "base_epoch": "1",
      "base_version": "3.0.6",
      "direction": "upgrade",
      "host_epoch": "1",
      "host_version": "3.0.7",
      "name": "openssl"
    }
  ]
}
