crates/web/tests/snapshots/fixture_structure_test__post_tarball_stale.snap
---
source: inspectah-web/tests/fixture_structure_test.rs
expression: value
---
{
  "error": "stale generation: expected 2, got 1"
}
