crates/web/tests/snapshots/fixture_structure_test__post_undo_nothing.snap
---
source: inspectah-web/tests/fixture_structure_test.rs
expression: value
---
{
  "error": "nothing to undo"
}
